--- a/_posts/2023-06-15-INITIUM-端传媒获亚洲出版业协会-2023卓越新闻奖-六项大奖.html
+++ b/_posts/2023-06-15-INITIUM-端传媒获亚洲出版业协会-2023卓越新闻奖-六项大奖.html
@@ -8,8 +8,8 @@ tags: blog
 author: 端传媒
 ---
 
-<p>端传媒</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230616-initiumnews-sopa-awards-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/cefcfa75af2b4e07bbe0b158391cb6a0.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月28日，北京的示威活动中，一名示威者举著白纸并高喊口号。在街头和大学校园，反对封控的抗议蔓延中国各地。图：Bloomberg via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2022年11月28日，北京的示威活动中，一名示威者举著白纸并高喊口号。在街头和大学校园，反对封控的抗议蔓延中国各地。图：Bloomberg via Getty Images<span class="credit"></span></figcaption></figure><p>亚洲出版协会（SOPA）揭晓“2023年卓越新闻奖”得奖名单，早前获八项提名的端传媒最终摘获六项大奖：</p>
+<p>端传媒</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230616-initiumnews-sopa-awards-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/bc7092c878134dce9b55cd8fc090890e.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞，现场有烛光燃点。摄：Thomas Peter /Reuters/達志影像" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年11月27日晚上，北京亮马河畔，大量市民参与悼念乌鲁木齐大火遇难同胞，现场有烛光燃点。摄：Thomas Peter /Reuters/達志影像<span class="credit"></span></figcaption></figure><p>亚洲出版协会（SOPA）揭晓“2023年卓越新闻奖”得奖名单，早前获八项提名的端传媒最终摘获六项大奖：</p>
 <ul>
 <li>卓越专题特写奖/金奖——【当白纸穿透中国大学高墙：站出来，看到了集体行动的可能】</li>
 <li>卓越科技报道奖/银奖——【“天上有云、中间有网、地上有格”中国监控国家的诞生】</li>
@@ -24,8 +24,8 @@ author: 端传媒
 <p>亚洲出版业协会“卓越新闻奖”至今踏入第二十五届，该奖为表彰亚太地区内杂志、通讯社及网络出版刊物中的杰出代表而设，涵盖超过20个奖项类别，被视为区内出版业界最负盛名的奖项。</p>
 <p>支持我们、支持好新闻，请成为<a href="http://bit.ly/2wVfM6g">付费会员</a>，即可畅读全站所有好内容。我们还有推出<a href="https://bit.ly/3bUODnu">学生方案</a>，一起与端传媒站得更近。</p>
 <h1>得奖作品介绍</h1>
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230616-initiumnews-sopa-awards-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/68e471266ee44797af1f47335f758c0d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-<figcaption itemprop="caption">2022年11月27日中午，清华大园数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。</figcaption></figure>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230616-initiumnews-sopa-awards-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/68e471266ee44797af1f47335f758c0d.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月27日中午，清华大学数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">2022年11月27日中午，清华大学数百名学生加入最近的抗议潮，现场齐声高呼“民主法治、表达自由”。</figcaption></figure>
 
 <h2><a href="https://theinitium.com/article/20221203-mainland-students-covid-policy-protest/">《当白纸穿透中国大学高墙：站出来，看到了集体行动的可能》</a></h2>
 <p>一场近30年来罕有的集体性、大规模的抗疫浪潮席卷中国大陆。运动从市民阶层反封控政策升级为一场政治运动，始于南京传媒学院的学生。他们手举充满政治隐喻的白纸在校内静站，将这一曾以为只是乍现的微弱火光抬至一场震撼所有人的怒火。南传之后，中国不同省份高校陆续出现不同规模的抗议行动，北大、清华两所顶级高校也于次日加入抗议。清华数百名学生聚集于校内食堂前空地，喊出了“表达自由、民主自由”的口号。</p>
@@ -68,4 +68,6 @@ author: 端传媒
 
 <h2><a href="https://theinitium.com/article/20220421-mainland-omicron-shanghai-nursing-home/?code=IjIwMjIwNDIxLW1haW5sYW5kLW9taWNyb24tc2hhbmdoYWktbnVyc2luZy1ob21lIg:1pSLgp:Dy-FBNiOsgG45qUQwmN8NW6obzM">《失守与死亡：疫情中的上海养老院》</a></h2>
 <p>在这场始料未及的疫情和突如其来的封城中，上海养老机构渐渐出现出现院内染疫、运转不力和管理混乱的状况，但资讯受到审查和掩盖，官方拒绝披露养老机构的情况。在这场疫情中，老人群体的死亡无法被准确统计，他们的死亡甚至不被看见。</p>
-<p>这篇报导通过上海封城养老机构出现的悲剧，尝试回溯背后深层痼疾：过去两年疫情，中国是否有抓住疫情平稳期做好应对准备？报导揭露出，养老机构严防死守的策略和事无巨细的监管，虽然能带来短暂的安宁，但不能回应病毒的进化、防疫需求的转变，同时也衍生出长者护理的新问题。故此，运动式防疫不仅带来资源错位，更关键的是，官方未有为疫情爆发做出足够的准备。在上海封城资讯不透明、信息混乱的期间，这篇报导罕有揭露了隐密惨况的养老机构，多层次展现问题及背后的制度缺漏，是一篇笔触细腻的详实报导。报导为记录中国疫情提供了一块不可或缺的真相碎片，向中国官方发出尖锐问责。报导刊出后，在社会公众引起广泛回响，为许多无法发声的逝去生命留下重要记录。</p><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
+<p>这篇报导通过上海封城养老机构出现的悲剧，尝试回溯背后深层痼疾：过去两年疫情，中国是否有抓住疫情平稳期做好应对准备？报导揭露出，养老机构严防死守的策略和事无巨细的监管，虽然能带来短暂的安宁，但不能回应病毒的进化、防疫需求的转变，同时也衍生出长者护理的新问题。故此，运动式防疫不仅带来资源错位，更关键的是，官方未有为疫情爆发做出足够的准备。在上海封城资讯不透明、信息混乱的期间，这篇报导罕有揭露了隐密惨况的养老机构，多层次展现问题及背后的制度缺漏，是一篇笔触细腻的详实报导。报导为记录中国疫情提供了一块不可或缺的真相碎片，向中国官方发出尖锐问责。报导刊出后，在社会公众引起广泛回响，为许多无法发声的逝去生命留下重要记录。</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230616-initiumnews-sopa-awards-2023/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2022/11/cefcfa75af2b4e07bbe0b158391cb6a0.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2022年11月28日，北京的示威活动中，一名示威者举著白纸并高喊口号。在街头和大学校园，反对封控的抗议蔓延中国各地。图：Bloomberg via Getty Images" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2022年11月28日，北京的示威活动中，一名示威者举著白纸并高喊口号。在街头和大学校园，反对封控的抗议蔓延中国各地。图：Bloomberg via Getty Images</figcaption></figure><p><small class="u-font-sans">本刊载内容版权为端传媒或相关单位所有，未经<a href="mailto:editor@theinitium.com" target="_blank">端传媒编辑部</a>授权，请勿转载或复制，否则即为侵权。</small></p>
