--- a/_posts/2023-06-15-PQ-三星技術外洩至中國蓋複製工廠-韓國法辦內賊.html
+++ b/_posts/2023-06-15-PQ-三星技術外洩至中國蓋複製工廠-韓國法辦內賊.html
@@ -22,11 +22,11 @@ author: 林貝利
 
 
 
-<p>水原地檢在新聞稿中表示這起案件的嚴重程度「<strong>從犯罪規模和損害程度上，難以與以往個別半導體技術外洩案件進行比較</strong>。」</p>
+<p>水原地檢在新聞稿中表示這起案件的嚴重程度「<strong>從犯罪規模和損害程度上，難以與過去個別半導體技術外洩案件進行比較</strong>。」</p>
 
 
 
-<p>A 被告等人自 2018 年 8 月到 2019 年，利用<strong>竊取到手的三星半導體晶片工廠 BED</strong>（Besic Engineering Data）、<strong>製程配置圖和設計圖</strong>等商業機密資料，計劃在<strong>中國西安建設半導體工廠</strong>。</p>
+<p>A 被告等人自 2018 年 8 月到 2019 年，利用<strong>竊取到手的三星半導體晶片工廠 BED</strong>（Basic Engineering Data）、<strong>製程配置圖和設計圖</strong>等商業機密資料，計劃在<strong>中國西安建設半導體工廠</strong>。</p>
 
 
 
@@ -34,15 +34,11 @@ author: 林貝利
 
 
 
-<p>這些是三星電子<strong>經過 30 多年的實驗、研發和模擬所獲得的資料</strong>，以達到最佳的晶片製程，檢方明確表示，這些資料是<strong>價值至少 3,000 億韓元，甚至最高可達數兆韓元的商業機密</strong>，也是國家的核心技術。</p>
+<p>這些是三星電子<strong>經過 30 多年的實驗、研發和模擬所獲得的資料</strong>，以達到最佳的晶片製程，檢方明確表示，這些資料是<strong>價值至少 3,000 億韓元，甚至最高可達數兆韓元的商業秘密</strong>，也是國家的核心技術。</p>
 
 
 
 <h3>背後指使者：韓國半導體知名權威</h3>
-
-
-
-<p>A 被告在三星電子工作了 18 年，還擔任過半導體領域的常務等職務，之後在 2001 年離職，到 SK 海力士擔任副社長，是韓國晶片製造領域的知名權威。</p>
 
 
 
@@ -102,7 +98,7 @@ author: 林貝利
 
 
 
-<p>據悉，A 被告否認了所有指控。其他被告則承認了部分犯行。<strong>違反《產業技術保護法》</strong>外流國家核心技術將處以 <strong>3 年以上有期徒刑及併科罰金 15 億韓元</strong>（約新台幣 3,600 萬元）。而<strong>違反《防止不正當利益競爭法》</strong>使商業秘密在外國被用以獲得不正當利益或對商業秘密所有人造成損害，將被<strong>處以 15 年以下有期徒刑或 15 億韓元以下罰款</strong>。</p>
+<p>據悉，A 被告否認了所有指控。其他被告則承認了部分犯行。<strong>違反《<a href="https://www.law.go.kr/%EB%B2%95%EB%A0%B9/%EC%82%B0%EC%97%85%EA%B8%B0%EC%88%A0%EC%9D%98%EC%9C%A0%EC%B6%9C%EB%B0%A9%EC%A7%80%EB%B0%8F%EB%B3%B4%ED%98%B8%EC%97%90%EA%B4%80%ED%95%9C%EB%B2%95%EB%A5%A0" target="_blank" rel="noopener">產業技術保護法</a>》</strong>外流國家核心技術將處以 <strong>3 年以上有期徒刑及併科罰金 15 億韓元</strong>（約新台幣 3,600 萬元）。而<strong>違反《<a href="https://www.law.go.kr/%EB%B2%95%EB%A0%B9/%EB%B6%80%EC%A0%95%EA%B2%BD%EC%9F%81%EB%B0%A9%EC%A7%80%EB%B2%95#:~:text=%EC%A0%9C1%EC%A1%B0(%EB%AA%A9%EC%A0%81)%20%EC%9D%B4,21.%5D" target="_blank" rel="noopener">防止不正當利益競爭法</a>》</strong>使商業秘密在外國被用以獲得不正當利益或對商業秘密所有人造成損害，將被<strong>處以 15 年以下有期徒刑或 15 億韓元以下罰金</strong>；在判處罰金的情況下，若違法行為所獲得的財產利益金額乘以 10 倍後超過 15 億韓元，則將處以財產利益金額的 2 倍以上、10 倍以下的罰金。</p>
 
 
 
@@ -110,4 +106,4 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/fa740fdb-401f6624-b2f2-4f5a-bfc0-d34df543dcaf-1024x858.png" alt="" class="wp-image-139777" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/fa740fdb-401f6624-b2f2-4f5a-bfc0-d34df543dcaf-1024x858.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/fa740fdb-401f6624-b2f2-4f5a-bfc0-d34df543dcaf-300x251.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/fa740fdb-401f6624-b2f2-4f5a-bfc0-d34df543dcaf-768x644.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/fa740fdb-401f6624-b2f2-4f5a-bfc0-d34df543dcaf.png 1410w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>圖解韓國技術外流複製工廠案<br>（圖／報呱製圖）</figcaption></figure></div><p>The post <a href="https://pourquoi.tw/intlnews-neasia-230609-230615-3/">三星技術外洩至中國蓋複製工廠　韓國法辦內賊</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b086d507-7db5e0a5-96cb-440d-be7e-d5c7cd0bdec7-1024x858.png" alt="" class="wp-image-139823" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b086d507-7db5e0a5-96cb-440d-be7e-d5c7cd0bdec7-1024x858.png 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b086d507-7db5e0a5-96cb-440d-be7e-d5c7cd0bdec7-300x251.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b086d507-7db5e0a5-96cb-440d-be7e-d5c7cd0bdec7-768x644.png 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/b086d507-7db5e0a5-96cb-440d-be7e-d5c7cd0bdec7.png 1410w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>圖解韓國技術外流複製工廠案<br>（圖／報呱製圖）</figcaption></figure></div><p>The post <a href="https://pourquoi.tw/intlnews-neasia-230609-230615-3/">三星技術外洩至中國蓋複製工廠　韓國法辦內賊</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
