--- a/_posts/2023-06-15-INITIUM-端传媒获亚洲出版业协会-2023卓越新闻奖-六项大奖.html
+++ b/_posts/2023-06-15-INITIUM-端传媒获亚洲出版业协会-2023卓越新闻奖-六项大奖.html
@@ -40,7 +40,7 @@ author: 端传媒
 <figcaption itemprop="caption">香港与新加坡。</figcaption></figure>
 
 <h2>《透视星港竞争：新加坡凭什么赢？》</h2>
-<p>《<a href="https://campaign.theinitium.com/20221116-hongkong-vs-singapore-data/index.html">大陆精英热捧香港优才计划，可以缓解香港人才荒吗？》</a></p>
+<p>《<a href="https://theinitium.com/article/20221219-hongkong-talent-attraction/">大陆精英热捧香港优才计划，可以缓解香港人才荒吗？》</a></p>
 <p>《<a href="https://theinitium.com/article/20221117-hongkong-move-to-singapore/?code=IjIwMjIxMTE3LWhvbmdrb25nLW1vdmUtdG8tc2luZ2Fwb3JlIg:1pSM6u:fsbqpr2k5xIfijx1g0MNOoChuNI">新加坡赢在哪里？香港怎么办？离港金融人谈星港前景</a>》</p>
 <p>《<a href="https://campaign.theinitium.com/20221116-hongkong-vs-singapore-data/index.html">新加坡抢走香港人才？香港被赶超？数据告诉你真实“战况”</a>》</p>
 <p>香港遭遇人才流失、新加坡抢夺香港人才在2022年成为媒体和网路热议话题。在后疫情时代，星港两地都轮番推出经济刺激措施和人才吸引政策，被媒体认为是隔空竞争，其中经历移民潮和外国专才流失的香港政府更为焦虑。同时，当大量经济发达地区和国家都进入少子化甚至人口负增长阶段，而知识又是当前经济的重要资源，全球人才战都非常激烈，是当前经济领域的重要现象。</p>
