--- a/_posts/2023-06-15-PQ-三星技術外洩至中國蓋複製工廠-韓國法辦內賊.html
+++ b/_posts/2023-06-15-PQ-三星技術外洩至中國蓋複製工廠-韓國法辦內賊.html
@@ -18,7 +18,7 @@ author: 林貝利
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-1024x682.jpeg" alt="" class="wp-image-139741" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>三星半導體晶片製造工廠。<br>（圖／三星）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-1024x682.jpeg" alt="" class="wp-image-139741" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-1024x682.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a-768x512.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/f6006fb2-d192cc94-a39a-4a21-9366-9a866306445a.jpeg 1280w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>三星半導體晶片製造工廠。<br>（圖／三星）</figcaption></figure></div>
 
 
 
