--- a/_posts/2023-06-17-PQ-新北餵藥案-王必勝駁斥政治操作-全教總呼籲盡快揭露真相.html
+++ b/_posts/2023-06-17-PQ-新北餵藥案-王必勝駁斥政治操作-全教總呼籲盡快揭露真相.html
@@ -19,7 +19,7 @@ author: 李晏蓉
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0.jpeg" alt="衛福部台北醫院昨（16）日宣布即起提供全台幼兒園幼童免費巴比妥、BZD 檢驗，但後修正為限新北市。衛福部次長王必勝隨即於昨天晚間澄清，純粹是醫院發稿誤植，絕非政治操作。／圖：中央社" class="wp-image-139925" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0-768x576.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>衛福部台北醫院昨（16）日宣布即起提供全台幼兒園幼童免費巴比妥、BZD 檢驗，但後修正為限新北市。衛福部次長王必勝隨即於昨天晚間澄清，純粹是醫院發稿誤植，絕非政治操作。／圖：中央社</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0.jpeg" alt="衛福部台北醫院昨（16）日宣布即起提供全台幼兒園幼童免費巴比妥、BZD 檢驗，但後修正為限新北市。衛福部次長王必勝隨即於昨天晚間澄清，純粹是醫院發稿誤植，絕非政治操作。／圖：中央社" class="wp-image-139925" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/5e668264-2000x1500_wmky_06966337001774_0-768x576.jpeg 768w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>衛福部台北醫院昨（16）日宣布即起提供全台幼兒園幼童免費巴比妥、BZD 檢驗，但後修正為限新北市。衛福部次長王必勝隨即於昨天晚間澄清，純粹是醫院發稿誤植，絕非政治操作。／圖：中央社</figcaption></figure></div>
 
 
 
