--- a/_posts/2023-06-18-PQ-蕭良嶼-太陽花世代的結束-柯文哲與黃國昌應從借來的神壇上滾開.html
+++ b/_posts/2023-06-18-PQ-蕭良嶼-太陽花世代的結束-柯文哲與黃國昌應從借來的神壇上滾開.html
@@ -18,7 +18,7 @@ author: 蕭良嶼
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/2ded5a5a-201206281035737_o.jpg" alt="" class="wp-image-139986" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/2ded5a5a-201206281035737_o.jpg 640w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/2ded5a5a-201206281035737_o-300x225.jpg 300w" sizes="(max-width: 640px) 100vw, 640px" /><figcaption>2011年8月台大爆發錯值愛滋器官事件，將愛滋病患器官捐給台大四名病患及成大醫院一名病患，社會追究台大移植小組責任，台北市衛生局2012年6月中召開醫師懲戒委員會，決議柯文哲等九名醫師不受任何懲戒，當時這起烏龍事件，因為台大醫院的醫檢師與協調師篩檢溝通出錯，震驚社會，台大緊急出面道歉。<br>圖／擷取自華視新聞2012年6月28日報導畫面</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/2ded5a5a-201206281035737_o.jpg" alt="" class="wp-image-139986" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/2ded5a5a-201206281035737_o.jpg 640w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/2ded5a5a-201206281035737_o-300x225.jpg 300w" sizes="(max-width: 640px) 100vw, 640px" /><figcaption>2011年8月台大爆發錯值愛滋器官事件，將愛滋病患器官捐給台大四名病患及成大醫院一名病患，社會追究台大移植小組責任，台北市衛生局2012年6月中召開醫師懲戒委員會，決議柯文哲等九名醫師不受任何懲戒，當時這起烏龍事件，因為台大醫院的醫檢師與協調師篩檢溝通出錯，震驚社會，台大緊急出面道歉。<br>圖／擷取自華視新聞2012年6月28日報導畫面</figcaption></figure></div>
 
 
 
