--- a/_posts/2023-06-19-PQ-侯友宜赴台大補考-民調最低打死不退.html
+++ b/_posts/2023-06-19-PQ-侯友宜赴台大補考-民調最低打死不退.html
@@ -14,7 +14,7 @@ author: 陳柏諺
 
 
 
-<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191.jpg" alt="" class="wp-image-140090" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191-300x188.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191-768x481.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>侯友宜出席校園總統馬拉松論壇。／圖：中央社</figcaption></figure>
+<div class="wp-block-image"><figure class="aligncenter size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191.jpg" alt="" class="wp-image-140090" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191.jpg 800w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191-300x188.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/e1f02d14-2306191-768x481.jpg 768w" sizes="(max-width: 800px) 100vw, 800px" /><figcaption>侯友宜出席校園總統馬拉松論壇。／圖：中央社</figcaption></figure></div>
 
 
 
@@ -38,7 +38,7 @@ author: 陳柏諺
 
 
 
-<figure class="wp-block-image size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/78e49f88-230619.jpg" alt="" class="wp-image-140087" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/78e49f88-230619.jpg 687w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/78e49f88-230619-300x191.jpg 300w" sizes="(max-width: 692px) 100vw, 692px" /><figcaption>亞太青年協會副秘書長曾鐙賢。／圖：亞太青年協會臉書</figcaption></figure>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/78e49f88-230619.jpg" alt="" class="wp-image-140087" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/78e49f88-230619.jpg 687w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/78e49f88-230619-300x191.jpg 300w" sizes="(max-width: 692px) 100vw, 692px" /><figcaption>亞太青年協會副秘書長曾鐙賢。／圖：亞太青年協會臉書</figcaption></figure></div>
 
 
 
@@ -74,7 +74,7 @@ author: 陳柏諺
 
 
 
-<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-1024x683.jpg" alt="" class="wp-image-140093" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>侯友宜指出，未來要讓青年能夠遠離戰場，進入職場。／圖：陳柏諺</figcaption></figure>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-1024x683.jpg" alt="" class="wp-image-140093" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/1f4dc816-dsc_6340-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>侯友宜指出，未來要讓青年能夠遠離戰場，進入職場。／圖：陳柏諺</figcaption></figure></div>
 
 
 
@@ -94,7 +94,17 @@ author: 陳柏諺
 
 
 
-<figure class="wp-block-image size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/c570d109-dsc_6345-1024x683.jpg" alt="" class="wp-image-140102" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/c570d109-dsc_6345-1024x683.jpg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/c570d109-dsc_6345-300x200.jpg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/c570d109-dsc_6345-768x512.jpg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/c570d109-dsc_6345-1536x1024.jpg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/c570d109-dsc_6345-2048x1365.jpg 2048w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>主持人陳以信，學生中途一度不滿，表示點名機會不均。／圖：陳柏諺</figcaption></figure>
+<p>座談會結束後，社民黨台北市議員苗博雅在臉書上發表感想，誇獎侯友宜有<strong>「很大的進步」</strong>，他指出侯友宜這次帶了一個<strong>人肉盾牌</strong>陳以信上台，幫忙介入QA、複誦問題、轉化問題、延長反應時間、提示答案。</p>
+
+
+
+<p>苗博雅認為，在答題狀況上，陳以信比侯友宜<strong>好很多</strong>，建議總統大選也可以考慮<strong>侯信配</strong>。</p>
+
+
+
+<figure class="wp-block-embed aligncenter is-type-rich is-provider-嵌入內容處理常式 wp-block-embed-嵌入內容處理常式"><div class="wp-block-embed__wrapper">
+<div class="fb-post" data-href="https://www.facebook.com/miaopoya.sdp/posts/pfbid02nt5JAMxQL2DBX1i8neK2Yrp8RwdM5huTZe1tuefhCBKffvfkpqviGM8EE67U3HqQl" data-width="552"></div>
+</div></figure>
 
 
 
