--- a/_posts/2023-06-20-INITIUM-31位离港摄影师-留下最后的香港影像.html
+++ b/_posts/2023-06-20-INITIUM-31位离港摄影师-留下最后的香港影像.html
@@ -25,7 +25,7 @@ author: 端传媒摄影组
 <figcaption itemprop="caption"></figcaption></figure>
 
 <h2>张志伟 CHEUNG Chi Wai《变形人间》</h2>
-<p>照片是源自 2022 年疫情下的一个计划⸺“新冠新观”的“下回分解”联展。概念来自卡 夫卡的《变形记》的一句:“早上起床发觉自己变成虫。”疫情突然降临，我们的身份亦 顿时产生变化，我邀请数位朋友穿戴虫的道具后拍摄及访问，像是超现实的特摄片。人 物是小咪(也是制作虫的道具的戏偶师)和她丈夫 WF CHAN，地点是大埔。</p>
+<p>照片是源自2022年疫情下的一个计划⸺“新冠新观”的“下回分解”联展。概念来自卡 夫卡的《变形记》的一句:“早上起床发觉自己变成虫。”疫情突然降临，我们的身份亦 顿时产生变化，我邀请数位朋友穿戴虫的道具后拍摄及访问，像是超现实的特摄片。人 物是小咪(也是制作虫的道具的戏偶师)和她丈夫 WF CHAN，地点是大埔。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/2fae424147b142a08080216e2fe76b49.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
@@ -44,8 +44,8 @@ author: 端传媒摄影组
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/f7944e4545054ede8260622799abcf01.jpg?imageView2/1/w/1080/h/607/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
-<h2>陈焯煇 Raby CHAN 《无题》</h2>
-<p>2022年6月14日，珍宝海鲜舫离港驶向南中国海。对这艘富东方情调的船，我没有具体 的记忆，唯一印象是《食神》和妈妈的船上婚宴。珍宝沉没，象征意义大于一切，这些 年有太多一个时代的结束，珍宝是香港人情绪的载体。我人在台湾，无缘纪录，回港已 是 2023，一切云淡风轻。回家后，寻找家庭相簿，想回到那只还未沉没，又来不及登上 的船，凝望到的是母亲三十年前身影，我挑选几张泛黄的照片放在书内，离开了香港。</p>
+<h2>陈焯𪸩 Raby CHAN 《无题》</h2>
+<p>2022年6月14日，珍宝海鲜舫离港驶向南中国海。对这艘富东方情调的船，我没有具体的记忆，唯一印象是《食神》和妈妈的船上婚宴。珍宝沉没，象征意义大于一切，这些年有太多一个时代的结束，珍宝是香港人情绪的载体。我人在台湾，无缘纪录，回港已 是 2023，一切云淡风轻。回家后，寻找家庭相簿，想回到那只还未沉没，又来不及登上 的船，凝望到的是母亲三十年前身影，我挑选几张泛黄的照片放在书内，离开了香港。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/a913c83c2b1f4f1c8f97112c31fb8187.jpg?imageView2/1/w/1080/h/658/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
@@ -55,12 +55,12 @@ author: 端传媒摄影组
 <figcaption itemprop="caption"></figcaption></figure>
 
 <h2>Jimmy WONG《616 那一夜》</h2>
-<p>2019 年 6 月 16 日，由香港民间人权阵线 Civil Human Rights Front 举办的“谴责镇压，撤回 恶法”大游行，游行人士到达政府总部一带后仍然留守，主办单位公布游行有 200 万零 1 人参与。</p>
+<p>2019年6月16日，由香港民间人权阵线 Civil Human Rights Front 举办的“谴责镇压，撤回 恶法”大游行，游行人士到达政府总部一带后仍然留守，主办单位公布游行有200 万零1人参与。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/7af6f6c8bdd746dab287e19306847ec9.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
 <h2>高仲明 KO Chung Ming《无题》</h2>
-<p>旧苏屋邨是我出生的地方，直到 6、7 岁前一直住在这里。后来家庭环境有变，先后迁到 又一村、中半山。富贵春梦，入行成为摄影师后，又搬回平民区。我的童年回忆零散而 破碎，但苏屋邨的片段却异常清晰。某年圣诞，我如常在骑楼发呆，外面忽然有个阿伯 的头朝著我飞过来，我奔回屋内大叫:“圣诞老人吖!”</p>
+<p>旧苏屋邨是我出生的地方，直到6、7岁前一直住在这里。后来家庭环境有变，先后迁到 又一村、中半山。富贵春梦，入行成为摄影师后，又搬回平民区。我的童年回忆零散而 破碎，但苏屋邨的片段却异常清晰。某年圣诞，我如常在骑楼发呆，外面忽然有个阿伯 的头朝著我飞过来，我奔回屋内大叫:“圣诞老人吖!”</p>
 <p>苏屋邨在 2008 年拆卸，在此之前我花了 3-4 年时间，仔细拍下这里的景物。这是我一 个 long-term project，算是把童年的画面重新收拾一遍。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/85ca251a0b864a86b917c938597c987c.jpg?imageView2/1/w/1080/h/717/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
@@ -68,7 +68,7 @@ author: 端传媒摄影组
 <h2>罗君豪 LO Kwan Ho《海底隧道》</h2>
 <p>本应熟悉不过的红磡海底隧道，在这刻变得陌生。</p>
 <p>我离开了这条每天必经的红隧，到了遥远的他方。</p>
-<p>摄于2019年 8月 3日。</p>
+<p>摄于2019年8月3日。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/c703f834f9d447feb6455033f74f2145.jpg?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
@@ -105,12 +105,12 @@ author: 端传媒摄影组
 <figcaption itemprop="caption"></figcaption></figure>
 
 <h2>谭德润 Mike TAM《熟悉的影像》</h2>
-<p>不能带走的，就只好记在脑海中，放在心里;登上高山，尽量看多些熟悉的境物，大大 的吸一口气，很满足。</p>
+<p>不能带走的，就只好记在脑海中，放在心里;登上高山，尽量看多些熟悉的境物，大大的吸一口气，很满足。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/c199620ac3c54df0bf69be3713a67ac2.jpg?imageView2/1/w/1080/h/810/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
 <h2>谢至德 Ducky TSE Chi Tak 《香港面孔⸺2017–19》</h2>
-<p>在《香港面孔》系列中，我将香港人“不呈现”的身分一瞬间“再呈现”。今天回看这一 组 90 年代下的作品:爱立信 337、地铁公众电话、Chips 波鞋等等，再透过人物在空间 中的姿态，仿佛带你经历九七回归前那种对香港爱恨纠葛的心情。作品呼唤一个又一个 我们曾经拥抱过，却现已各奔东西的念头。这是我经常提到的“无常”(Impermanence)。 我在众生之中游走，犹如走进无限的生灭，在生灭之间寻找灵魂互相碰撞的火花。在作 品中找到了 90 年代香港人难以梳理的身份，而低下阶层人士尤甚。艺术作品的灵魂也 许就像一支箭，在你不知道的时候碰到你的身体，与你结合。刺痛就是为要唤醒睡了很 久的意识。</p>
+<p>在《香港面孔》系列中，我将香港人“不呈现”的身分一瞬间“再呈现”。今天回看这一组 90 年代下的作品:爱立信 337、地铁公众电话、Chips 波鞋等等，再透过人物在空间 中的姿态，仿佛带你经历九七回归前那种对香港爱恨纠葛的心情。作品呼唤一个又一个 我们曾经拥抱过，却现已各奔东西的念头。这是我经常提到的“无常”(Impermanence)。 我在众生之中游走，犹如走进无限的生灭，在生灭之间寻找灵魂互相碰撞的火花。在作 品中找到了90年代香港人难以梳理的身份，而低下阶层人士尤甚。艺术作品的灵魂也 许就像一支箭，在你不知道的时候碰到你的身体，与你结合。刺痛就是为要唤醒睡了很 久的意识。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/b1836897389e4dd7ae9a0118dd2aa695.jpg?imageView2/1/w/1080/h/1171/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
@@ -141,7 +141,7 @@ author: 端传媒摄影组
 <figcaption itemprop="caption"></figcaption></figure>
 
 <h2>Shan KWOK 《再见》</h2>
-<p>一个 C9摄影师对香港的告别式并唔系攞住“重腍腍”嘅相机影 D 咩惊天动地嘅作品，而 系每次同父母见面讲 Bye Bye 之后随手举起电话影低佢地嘅背影，喱个动作没有刻意安 排，所以 Quality 欠奉。各位观众未必感受到 D 相同主题有乜关系，但喱 D 就系我最放唔 落 嘅 “ 香 港 ”。</p>
+<p>一个C9摄影师对香港的告别式并唔系攞住“重腍腍”嘅相机影D咩惊天动地嘅作品，而 系每次同父母见面讲 Bye Bye 之后随手举起电话影低佢地嘅背影，喱个动作没有刻意安 排，所以 Quality 欠奉。各位观众未必感受到 D 相同主题有乜关系，但喱D就系我最放唔 落嘅 “ 香 港 ”。</p>
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230621-photo-leaving-on-a-jet-plane/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/06/a3e1f331ba364e6a8d932d59614b783c.jpg?imageView2/1/w/1080/h/996/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
 <figcaption itemprop="caption"></figcaption></figure>
 
@@ -155,7 +155,7 @@ author: 端传媒摄影组
 <figcaption itemprop="caption"></figcaption></figure>
 
 <p>谢明庄 SE Ming Chong《在途上》</p>
-<p>日期 Date:31 / 10 / 2021</p>
+<p>日期 Date:31/10/2021</p>
 <p>时间 Time:5:51:11PM</p>
 <p>纬度 Latitude:22° 18.858’N</p>
 <p>经度 Longitude:113° 55.922’E</p>
