--- a/_posts/2023-06-20-INITIUM-早报-华尔街日报-指中国拟在古巴新建军事训练设施.html
+++ b/_posts/2023-06-20-INITIUM-早报-华尔街日报-指中国拟在古巴新建军事训练设施.html
@@ -27,8 +27,9 @@ author:
 <p>对亨特的相关调查已经进行了五年。他被指控在2017和2018年未按时纳税，并被质疑买枪时对滥用药物作出虚假陈述。</p>
 <p>特拉华州检方表示，理论上，亨特的每项逃税指控都面临最高1年监禁处罚，枪枝指控面临最高10年监禁处罚。不过他们已经与亨特达成了认罪协议。</p>
 <p>协议需要得到法官批准，并由法官决定刑期。协议条款很可能包括亨特不必坐牢。预计他会同意接受药物治疗和监控。</p>
-<h3>失联的泰坦尼克号观光潜艇仍在搜救</h3>
-<p>泰坦尼克号沉船观光潜艇在加拿大纽芬兰对开海域下潜1小时45分钟后失联，搜救工作仍在进行。</p>
+<p><a href="https://www.theguardian.com/us-news/2023/jun/20/hunter-biden-plead-guilty-federal-charges">美国白宫周二发表简短声明称</a>，总统和第一夫人爱他们的儿子，并支持他继续重建他的生活，且不会就此再发表评论。</p>
+<h3>搜救失联的泰坦尼克号观光潜艇进入第三天</h3>
+<p>泰坦尼克号沉船观光潜艇在加拿大纽芬兰对开海域下潜1小时45分钟后失联，搜救进入第三天。</p>
 <p><a href="https://www.bbc.com/news/live/world-us-canada-65953941">美国海岸警卫队称</a>，潜艇内氧气支持生命的时间已不到40小时。</p>
 <p>潜艇内共有五人，分别是此观光项目运营公司OceanGate的首席执行官Stockton Rush，英籍巴基斯坦商人Shahzada Dawood和他的儿子Suleman，英国富豪和探险家Hamish Harding，曾探索过泰坦尼克号的前法国海军潜水员Paul-Henry Nargeolet。</p>
 <h3>巴黎奥组委总部遭警方搜查</h3>
