--- a/_posts/2023-06-20-PQ-布林肯訪中會見習近平-美國-去風險化-的對話.html
+++ b/_posts/2023-06-20-PQ-布林肯訪中會見習近平-美國-去風險化-的對話.html
@@ -10,7 +10,7 @@ author: 張東和
 
 <p>美國國務卿布林肯於本（6）月 18～19 日訪問中國，這是美國外交高層五年來第一次到中國進行訪問，布林肯與中國外交部長秦剛、中央外事工作委員會辦公室主任王毅進行「坦率、實質、建設性的討論」，並與中國國家主席習近平會面。</p>
 <p>The post <a href="https://pourquoi.tw/intlnews-nasaoa-230621-1/">布林肯訪中會見習近平　美國「去風險化」的對話　</a> first appeared on <a href="https://pourquoi.tw">pourquoi 報呱</a>.</p>
-										<p>美國國務卿布林肯（Antony Blinken）於本（6）月 18～19 日訪問中國，這是美國外交高層 5 年來第一次到中國進行訪問，布林肯與中國外交部長秦剛、中央外事工作委員會辦公室主任王毅進行「坦率、實質、建設性的討論」，並與中國國家主席習近平會面。</p>
+										<p>美國國務卿布林肯（Antony Blinken）於本（6）月 18～19 日訪問中國，這是美國外交高層 5 年來第一次到中國進行訪問，布林肯行禮如儀地宣稱，他與中國外交部長秦剛、中央外事工作委員會辦公室主任王毅進行了「坦率、實質、建設性的討論」。也與中國國家主席習近平會面。</p>
 
 
 
@@ -26,7 +26,7 @@ author: 張東和
 
 
 
-<p>今（2023）年 2 月，中國間諜氣球飛越美國，使得布林肯取消訪問中國的行程。但布林肯此行卻是在中國的古巴間諜衛星被揭露影響美國國家安全的狀況下前去中國訪問。</p>
+<p>今（2023）年 2 月，中國間諜氣球飛越美國，使得布林肯取消訪問中國的行程。但<strong>布林肯此行卻是在中國的古巴間諜衛星被揭露影響美國國家安全的狀況下前去中國訪問</strong>。</p>
 
 
 
@@ -46,7 +46,7 @@ author: 張東和
 
 
 
-<p>共和黨紐約州眾議員斯特凡尼克（Elise Stefanik）也在布林肯訪中前批評：布林肯沒有譴責中國共產黨公然挑釁行為，反而用官方訪問合法化了中國對於美國主權持續的顛覆。她繼續說道：拜登政府在全球舞台的軟弱行為，將會持續鼓勵中國在美國敏感軍事設施購買農地，侵犯美國領空，在古巴蒐集情報反對我們。</p>
+<p>共和黨紐約州眾議員斯特凡尼克（Elise Stefanik）也在布林肯訪中前批評：<strong>布林肯沒有譴責中國共產黨公然挑釁行為，反而用官方訪問合法化了中國對於美國主權持續的顛覆</strong>。她繼續說道：拜登政府在全球舞台的軟弱行為，將會持續鼓勵中國在美國敏感軍事設施購買農地，侵犯美國領空，在古巴蒐集情報反對我們。</p>
 
 
 
@@ -64,11 +64,11 @@ author: 張東和
 
 
 
-<p>對話的目的不在於改變各自的立場，也不見得可以達成溝通協調，面對美中持續的「競爭」，在充滿高壓的情況下，缺乏對話與基本瞭解（立場與實力）也可能一發不可收拾，因誤判而導向衝突。</p>
+<p>對話的目的不在於改變各自的立場，也不見得可以達成溝通協調，面對美中持續的「競爭」，在充滿高壓的情況下，<strong>缺乏對話與基本瞭解（立場與實力）也可能一發不可收拾，因誤判而導向衝突</strong>。</p>
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-large"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-1024x684.jpeg" alt="" class="wp-image-140219" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-1024x684.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-768x513.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf.jpeg 1279w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國國家主席習近平（右）在人民大會堂接見美國國務卿布林肯（左）。<br>（圖／路透社／中央社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-large"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-1024x684.jpeg" alt="" class="wp-image-140219" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-1024x684.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-300x200.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf-768x513.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/ebb4ef29-d39890b0-d268-44cb-8df0-3329dfa413cf.jpeg 1279w" sizes="(max-width: 1024px) 100vw, 1024px" /><figcaption>中國國家主席習近平（右）在人民大會堂接見美國國務卿布林肯（左）。<br>（圖／路透社／中央社）</figcaption></figure></div>
 
 
 
@@ -76,7 +76,7 @@ author: 張東和
 
 
 
-<p>布林肯在不同場合說過類似的話，並非一廂情願。不久前，在今年 6 月的香格里拉對話上，中國國防部長李尚福高姿態拒絕與美國防長奧斯汀（Lloyd Austin）對話，奧斯汀就曾說美中保持溝通管道的重要性。鑒於美中關係的僵局對於整體國際安全局勢的影響，國際社會也期盼雙方有基本的對話機制，澳洲總理艾班尼斯（Anthony Albanese）強調<a href="https://www.pourquoi.tw/intlnews-nasaoa-230607-1/" target="_blank" rel="noopener">美中對話是印太安全的第一道護欄</a>，就是一例。</p>
+<p>布林肯在不同場合說過類似的話，並非一廂情願。不久前，在今年 6 月的香格里拉對話上，中國國防部長李尚福高姿態拒絕與美國防長奧斯汀（Lloyd Austin）對話，奧斯汀就曾說美中保持溝通管道的重要性。鑒於美中關係的僵局對於整體國際安全局勢的影響，國際社會也期盼雙方有基本的對話機制，澳洲總理艾班尼斯（Anthony Albanese）強調<a href="https://www.pourquoi.tw/intlnews-nasaoa-230607-1/" target="_blank" rel="noopener"><strong>美中對話是印太安全的第一道護欄</strong></a>，就是一例。</p>
 
 
 
@@ -88,11 +88,11 @@ author: 張東和
 
 
 
-<p>不過，我們必須注意的是，美國在一中政策下，不承認中華民國，台灣任何政治人物無法用中華民國跟美國交往。但也不用太過悲觀，美國雖不支持台獨，也不反對台獨，因為美國沒有支持和反對的立場，台灣的前途，還是要由台灣人自己決定，難以己願他力；另外，美國不支持台獨，也間接說明美國認為台灣現實上尚未獨立，也不因此就屬於中國，美國在不同場合中，都否認台灣是中國的一部份。</p>
+<p>不過，我們必須注意的是，美國在一中政策下，不承認中華民國，台灣任何政治人物無法用中華民國跟美國交往。但也不用太過悲觀，<strong>美國雖不支持台獨，也不反對台獨</strong>，因為美國沒有支持和反對的立場，拜登也曾經說過：台灣的前途，要由台灣人自己決定。台灣人面對獨立與否，難以己願他力；另外，美國不支持台獨，也間接說明美國認為台灣現實上尚未獨立，也不因此就屬於中國，<strong>美國在不同場合中，都否認台灣是中國的一部份</strong>。</p>
 
 
 
-<p>美國在意的是，區域的穩定、和平與繁榮。無庸置疑，中國就是區域穩定的破壞者。布林肯提到台海危機不僅是台灣的問題，每天世界上有 50% 的貨運、一半的貿易經過台灣海峽，70% 的高階半導體在台灣生產。一旦產生危機，對世界經濟會產生毀滅性的後果。<br><br>除了中國在台海、南海、東海的擴張與威嚇等地緣政治因素之外，美國必須處理美國企業在中國受到的不公平待遇、美國人不當被關押在中國，以及大量「吩坦尼」（Fentanyl，一種強效的類鴉片止痛劑）非法進口到美國，是美國 18～49 歲美國人的頭號殺手，需要切斷這個毒品供應鏈，以免造成更多人的死亡。</p>
+<p>美國在意的是，區域的穩定、和平與繁榮。無庸置疑，中國就是區域穩定的破壞者。布林肯提到台海危機不僅是台灣的問題，<strong>每天世界上有 50% 的貨運、一半的貿易經過台灣海峽</strong>，<strong>70% 的高階半導體在台灣生產</strong>。一旦產生危機，對世界經濟會產生毀滅性的後果。<br><br>除了中國在台海、南海、東海的擴張與威嚇等地緣政治因素之外，美國必須處理美國企業在中國受到的不公平待遇、美國人不當被關押在中國，以及大量<strong>「吩坦尼」</strong>（<strong>Fentanyl</strong>，一種強效的類鴉片止痛劑）非法進口到美國，是美國 18～49 歲美國人的頭號殺手，需要切斷這個毒品供應鏈，以免造成更多人的死亡。</p>
 
 
 
@@ -100,11 +100,11 @@ author: 張東和
 
 
 
-<p>美國很清楚光靠與中國對話，不會帶來溝通、遑論改變中國，而是必須要有實力作為後盾。即使，美國對中國發動了關稅戰、貿易戰、科技戰，美中貿易額卻依然創新高，2022 年美中、歐中貿易額都高達將近 7,000 億美元，歐盟更成為中國第一大貿易夥伴。</p>
+<p>美國很清楚光靠與中國對話，不會帶來溝通、遑論改變中國，而是必須要有實力作為後盾。即使，美國對中國發動了關稅戰、貿易戰、科技戰，美中貿易額卻依然創新高，<strong>2022 年美中、歐中貿易額都高達將近 7,000 億美元</strong>，歐盟更成為中國第一大貿易夥伴。</p>
 
 
 
-<p class="pqnote">雖然在輿論中，對於美中對抗導致經濟全面脫鉤的疑慮，在美國和歐盟共識下，對外多次宣示，面對中國是「去風險化」而非「脫鉤」。現實上，美中或歐中之間在經濟上難以脫鉤的情況下，只能以「去風險化」降低中國對美國與歐盟等國家安全的威脅，關鍵技術控管就是其中之一。布林肯說道：「必須保護美國的關鍵技術，以免被用來對付我們。」</p>
+<p class="pqnote">雖然在輿論中，對於美中對抗導致經濟全面脫鉤的疑慮，在美國和歐盟共識下，對外多次宣示，面對中國是「去風險化」而非「脫鉤」。現實上，美中或歐中之間在經濟上難以脫鉤的情況下，只能以<strong>「去風險化」</strong>降低中國對美國與歐盟等國家安全的威脅，關鍵技術控管就是其中之一。布林肯說道：「<strong>必須保護美國的關鍵技術，以免被用來對付我們。</strong>」</p>
 
 
 
@@ -116,7 +116,7 @@ author: 張東和
 
 
 
-<p>這也回答了中國對美國的批評：既要對話卻又要遏制中國。美國是基於保障自身國家安全出發，進行對話的同時也對中國實施制裁，例如將中國企業納入實體清單。這<strong>不是要切斷經濟上的聯繫，而是要求一個公平的經濟環境</strong>。</p>
+<p>這也回答了中國對美國的批評：既要對話卻又要遏制中國。美國是基於保障自身國家安全出發，進行對話的同時也對中國實施制裁，例如將中國企業納入實體清單。這<strong>不是要切斷經濟上的聯繫，而是要求一個安全、公平的經濟環境</strong>。</p>
 
 
 
@@ -124,11 +124,15 @@ author: 張東和
 
 
 
+<p>日本還給了菲律賓雷達，日本前參謀總長河野克俊評論道，給予菲律賓雷達非常有用，這意味著我們可以分享關於巴士海峽的情報。更有效監控中國飛機船艦在第一島鏈的進出。</p>
+
+
+
 <div class="wp-block-image"><figure class="aligncenter size-large is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/77368715-751093ba-44cb-45d3-85d5-653292b02c93-1024x768.jpeg" alt="" class="wp-image-140028" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/06/77368715-751093ba-44cb-45d3-85d5-653292b02c93-1024x768.jpeg 1024w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/77368715-751093ba-44cb-45d3-85d5-653292b02c93-300x225.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/77368715-751093ba-44cb-45d3-85d5-653292b02c93-768x576.jpeg 768w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/77368715-751093ba-44cb-45d3-85d5-653292b02c93-1536x1152.jpeg 1536w, https://storage.googleapis.com/stateless-34-84-11-249/2023/06/77368715-751093ba-44cb-45d3-85d5-653292b02c93-2048x1536.jpeg 2048w" sizes="(max-width: 523px) 100vw, 523px" /><figcaption>面對中國在東、南中國海上的霸權行為，日美菲在今年6月初實施了海上執法機構的首次聯合演訓，而三方的國安相關高階官員也在同月16日成立新的協商架構，加強共同應對能力，以維護印太地區的和平與穩定。左至右分別為美國國家安全顧問蘇利文、日本國家安全保障局長秋葉剛男，以及菲律賓國家安全顧問安約。<br>（圖／Twitter @USAmbJapan）</figcaption></figure></div>
 
 
 
-<p>同樣的，在經濟上，面對世界各國（尤其是中小型國家）遭受到中國經濟脅迫，美國也不斷與其他國家結盟中。鑒於歐盟已於 2021 年 12 月提出訂定「反脅迫工具」，今年 6 月 6 日，歐洲國會與歐盟理事會同意在歐盟國家在遭受到第三國經濟威脅時，提出反制措施，如關稅、貿易限制、公共採購等方式，也避免在 WTO 申訴的曠日廢時。</p>
+<p>同樣的，在經濟上，面對世界各國（尤其是中小型國家）遭受到中國經濟脅迫，美國也不斷與其他國家結盟中。鑒於歐盟已於 2021 年 12 月提出訂定「<strong>反脅迫工具</strong>」（Anti-Coercion Instrument,&nbsp;ACI）草案，歷時近一年半，在今（2023）年 6 月 6 日，歐洲國會與歐盟理事會同意在歐盟國家在遭受到第三國經濟威脅時，提出反制措施，如關稅、貿易限制、公共採購等方式，也避免在 WTO 申訴的曠日廢時。</p>
 
 
 
